# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the http-robtex-reverse-ip script that uses the Robtex service to
  perform a reverse lookup in order to discover all names associated with the
  IP. [riemann]

o [NSE] Updated script.db to correct some of the category changes made
  previously and to remove the accidental addition of non-existing snmp-brute2
  script. [Patrik]

o Fixed a bug in the IPv6 OS probe called NI. The Node Information
  Query didn't include the target address as the payload, so at least
  OS X didn't respond. This differed from the probe sent by the
  ipv6fp.py program from which some of our fingerprints were derived.
  [David]

o [NSE] Fixed an error in the mssql library that was causing the
  broadcast-ms-sql-discover script to fail when trying to update port version
  information. [Patrik]

o [NSE] Added the missing broadcast category to the broadcast-listener script.
  [Jason DePriest]

o [NSE] Made changes to the categories of the following scripts. Their new
  categories are:
    - http-userdir-enum.nse (auth,intrusive)
    - mysql-users.nse (auth,intrusive)
    - http-wordpress-enum.nse (auth,intrusive,vuln)
    - krb5-enum-users.nse (auth,intrusive)
    - snmp-win32-users.nse (default,auth,safe)
    - smtp-enum-users.nse (auth,external,intrusive)
    - ncp-enum-users.nse (auth,safe)
    - smb-enum-users.nse (auth,intrusive)
  [Duarte Silva]

o [NSE] Added a vulnerability management library (vulns.lua) to store and to
  report discovered vulnerabilities. [Djalal, Henri]

o [NSE] Added a new script krb5-enum-users.nse that performs user enumeration
  against Kerberos. [Patrik]

o [NSE] Added a new script http-put.nse that allows uploading of local files
  to remote web servers using the HTTP PUT method. Added HTTP PUT support to
  the http library. [Patrik]

o Made nbase compile with the clang compiler that is a part of Xcode
  4.2. [Daniel J. Luke]

o [NSE] Applied patch that fixes a nil table index bug discovered in the